<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/topImage"
        android:src="@drawable/ic_launcher_foreground"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:id="@+id/heading"
        android:text="@string/velkommen"
        style="@style/headingStart"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topImage"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/maintext"
        style="@style/subheadingStart"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading"/>


    <Button
        android:id="@+id/startCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/begynd"
        android:foreground="?attr/selectableItemBackground"
        style="@style/textButtonStart"
        android:background="@drawable/round_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="90dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>